5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4128/executions/1638_2724.log
== TEST (2019-04-11 10:31:35) 
-- CODE:
n1 = int(input("mm;"))
n2 = int(input("mn;"))
n3 = int(input("nn;"))

if(m1 < m2):
	print(m3)
	
else:
	print(m1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(m1 < m2):
NameError: name 'm1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:32:00) 
-- CODE:
n1 = int(input("mm;"))
n2 = int(input("mn;"))
n3 = int(input("nn;"))

if(n1 < n2):
	print(n3)
	
else:
	print(n1)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:32:14) 
-- CODE:
n1 = int(input("mm;"))
n2 = int(input("mn;"))
n3 = int(input("nn;"))

if(n1 < n2):
	print(n3)
	
else:
	print(n2)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:32:20) 
-- CODE:
n1 = int(input("mm;"))
n2 = int(input("mn;"))
n3 = int(input("nn;"))

if(n1 < n2):
	print(n3)
	
else:
	print(n2)
-- EXECUTION TIME:
0.198522
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
35
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
55
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:
789
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:32:27) 
-- CODE:
n1 = int(input("mm;"))
n2 = int(input("mn;"))
n3 = int(input("nn;"))

if(n1 < n2):
	print(n1)
	
else:
	print(n2)
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:32:34) 
-- CODE:
n1 = int(input("mm;"))
n2 = int(input("mn;"))
n3 = int(input("nn;"))

if(n1 < n2):
	print(n1)
	
else:
	print(n2)
-- EXECUTION TIME:
0.182535
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
258
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
55
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:
123
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:33:38) 
-- CODE:
n1 = int(input("mm;"))
n2 = int(input("mn;"))
n3 = int(input("nn;"))

le = max(n1,n2,n3)

if(le < n2):
	print(n1)
	
else:
	print(n2)
-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:33:46) 
-- CODE:
n1 = int(input("mm;"))
n2 = int(input("mn;"))
n3 = int(input("nn;"))

le = max(n1,n2,n3)

if(le < n2):
	print(n1)
	
else:
	print(n2)
-- EXECUTION TIME:
0.154513
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
788
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
55
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:
456
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:34:30) 
-- CODE:
n1 = int(input("mm;"))
n2 = int(input("mn;"))
n3 = int(input("nn;"))

le = max(n1,n2,n3)

if(le < n1):
	print(n1)
	
else:
	print(n2)
-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:34:37) 
-- CODE:
n1 = int(input("mm;"))
n2 = int(input("mn;"))
n3 = int(input("nn;"))

le = max(n1,n2,n3)

if(le < n1):
	print(n1)
	
else:
	print(n2)
-- EXECUTION TIME:
0.143908
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
788
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
55
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:
456
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:34:38) 
-- CODE:
n1 = int(input("mm;"))
n2 = int(input("mn;"))
n3 = int(input("nn;"))

le = max(n1,n2,n3)

if(le < n1):
	print(n1)
	
else:
	print(n2)
-- EXECUTION TIME:
0.286255
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
788
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
788
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:
788
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:34:39) 
-- CODE:
n1 = int(input("mm;"))
n2 = int(input("mn;"))
n3 = int(input("nn;"))

le = max(n1,n2,n3)

if(le < n1):
	print(n1)
	
else:
	print(n2)
-- EXECUTION TIME:
0.244417
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
788
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
788
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:
55
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:34:39) 
-- CODE:
n1 = int(input("mm;"))
n2 = int(input("mn;"))
n3 = int(input("nn;"))

le = max(n1,n2,n3)

if(le < n1):
	print(n1)
	
else:
	print(n2)
-- EXECUTION TIME:
0.336385
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
788
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
55
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:
456
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:34:39) 
-- CODE:
n1 = int(input("mm;"))
n2 = int(input("mn;"))
n3 = int(input("nn;"))

le = max(n1,n2,n3)

if(le < n1):
	print(n1)
	
else:
	print(n2)
-- EXECUTION TIME:
0.246827
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
456
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:

-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:
456
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:35:30) 
-- CODE:
n1 = int(input("mm;"))
n2 = int(input("mn;"))
n3 = int(input("nn;"))


if(n2 < n1 < n3):
	print(n1)
	
else:
	print(n2)
-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:35:46) 
-- CODE:
n1 = int(input("mm;"))
n2 = int(input("mn;"))
n3 = int(input("nn;"))


if(n2 < n1 < n3):
	print(n1)
	
else:
	print(n2)
-- EXECUTION TIME:
0.212256
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
788
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
55
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:
456
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:35:51) 
-- CODE:
n1 = int(input("mm;"))
n2 = int(input("mn;"))
n3 = int(input("nn;"))


if(n2 < n1 < n3):
	print(n1)
	
else:
	print(n2)
-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:36:22) 
-- CODE:
n1 = int(input("mm;"))
n2 = int(input("mn;"))
n3 = int(input("nn;"))


if(n1 < n2 < n3):
	print(n2)
	
else:
	print(n1)
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:36:24) 
-- CODE:
n1 = int(input("mm;"))
n2 = int(input("mn;"))
n3 = int(input("nn;"))


if(n1 < n2 < n3):
	print(n2)
	
else:
	print(n1)
-- EXECUTION TIME:
0.155906
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
258
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
99
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:
456
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:37:33) 
-- CODE:
n1 = int(input("mm;"))
n2 = int(input("mn;"))
n3 = int(input("nn;"))


if(n1 > n2 < n3):
	print(n2)
	

-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:37:47) 
-- CODE:
n1 = int(input("mm;"))
n2 = int(input("mn;"))
n3 = int(input("nn;"))


if(n1 > n2 < n3):
	print(n2)
	

-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:38:16) 
-- CODE:
n1 = int(input("mm;"))
n2 = int(input("mn;"))
n3 = int(input("nn;"))


if(n1 > n2 < n3):
	print(n2)
else:
	print(n3)

-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:38:26) 
-- CODE:
n1 = int(input("mm;"))
n2 = int(input("mn;"))
n3 = int(input("nn;"))


if(n1 > n2 < n3):
	print(n2)
else:
	print(n3)

-- EXECUTION TIME:
0.217315
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
35
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
55
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:
789
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:39:14) 
-- CODE:
n1 = int(input("mm;"))
n2 = int(input("mn;"))
n3 = int(input("nn;"))


if(n1 > n2 < n3):
	print(n2)
else(n2 > n1 <n3):
	print(n1)

-- ERROR:
File "XXXX", line 8
    else(n2 > n1 <n3):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:48:28) 
-- CODE:
n1 = int(input("mm;"))
n2 = int(input("mn;"))
n3 = int(input("nn;"))

el = max(n1,n2,n3)
gl = min(n1,n2,n3)

if(gl > n2 < el):
	print(n2)

else: 
	print(n1)

-- EXECUTION TIME:
0.208981
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
258
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
99
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:
123
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:48:29) 
-- CODE:
n1 = int(input("mm;"))
n2 = int(input("mn;"))
n3 = int(input("nn;"))

el = max(n1,n2,n3)
gl = min(n1,n2,n3)

if(gl > n2 < el):
	print(n2)

else: 
	print(n1)

-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:48:38) 
-- CODE:
n1 = int(input("mm;"))
n2 = int(input("mn;"))
n3 = int(input("nn;"))

el = max(n1,n2,n3)
gl = min(n1,n2,n3)

if(gl > n2 < el):
	print(n2)

else: 
	print(n1)

-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:49:15) 
-- CODE:
n1 = int(input("mm;"))
n2 = int(input("mn;"))
n3 = int(input("nn;"))

el = max(n1,n2,n3)
gl = min(n1,n2,n3)

if(gl < n2 < el):
	print(n2)

else: 
	print(n1)

-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:49:23) 
-- CODE:
n1 = int(input("mm;"))
n2 = int(input("mn;"))
n3 = int(input("nn;"))

el = max(n1,n2,n3)
gl = min(n1,n2,n3)

if(gl < n2 < el):
	print(n2)

else: 
	print(n1)

-- EXECUTION TIME:
0.310035
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
258
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
99
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:
456
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:38:40) 
-- CODE:
n1 = int(input("mm;"))
n2 = int(input("mn;"))
n3 = int(input("nn;"))

if(n1 < n2 < n3):
	print(n2)
if(n1 < n2 < n3):
	print(n2)
if(n2 < n1 < n3):
	print(n1)
if(n2 < n3 < n1):
	print(n3)
if(n3 < n1 < n2):
	print(n1)
if(n3 < n2 < n1):
	print(n2)
	
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:38:47) 
-- CODE:
n1 = int(input("mm;"))
n2 = int(input("mn;"))
n3 = int(input("nn;"))

if(n1 < n2 < n3):
	print(n2)
if(n1 < n2 < n3):
	print(n2)
if(n2 < n1 < n3):
	print(n1)
if(n2 < n3 < n1):
	print(n3)
if(n3 < n1 < n2):
	print(n1)
if(n3 < n2 < n1):
	print(n2)
	
-- EXECUTION TIME:
0.170992
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
258
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
77
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:
456
456
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:39:14) 
-- CODE:
n1 = int(input("mm;"))
n2 = int(input("mn;"))
n3 = int(input("nn;"))

if(n1 < n2 < n3):
	print(n2)
if(n1 < n3 < n2):
	print(n2)
if(n2 < n1 < n3):
	print(n1)
if(n2 < n3 < n1):
	print(n3)
if(n3 < n1 < n2):
	print(n1)
if(n3 < n2 < n1):
	print(n2)
	
-- EXECUTION TIME:
0.143893
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
258
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
77
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:
456
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
